frontend/test/should_pass/bitbucket23.grg
#using "bitbucket23"

test tst() : (string)
{
	n:tst::Test;
	return(n.toText());
}
