frontend/test/should_fail/ret_028.grg
test retTest : (Node)
{
	return(undeclared);
}
